동시성 관련 테스트 진행 - 2