@@ -2,6 +2,7 @@ package com.example.hh3week.application.useCase;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -22,15 +23,18 @@ import org.springframework.test.context.jdbc.Sql;
 
 import com.example.hh3week.adapter.in.dto.reservation.ReservationSeatDetailDto;
 import com.example.hh3week.adapter.in.dto.token.TokenDto;
+import com.example.hh3week.adapter.in.dto.waitingQueue.WaitingQueueDto;
 import com.example.hh3week.application.service.ReservationService;
 import com.example.hh3week.application.service.TokenService;
 import com.example.hh3week.application.service.WaitingQueueService;
 import com.example.hh3week.domain.reservation.entity.ReservationStatus;
 import com.example.hh3week.domain.waitingQueue.entity.WaitingQueue;
+import com.example.hh3week.domain.waitingQueue.entity.WaitingStatus;
 
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
+// @ActiveProfiles("test")
 @SpringBootTest
 @Sql({"classpath:schema.sql", "classpath:data.sql"})
 public class ReservationUseCaseInteractorConcurrencyTest {
@@ -67,7 +71,7 @@ public class ReservationUseCaseInteractorConcurrencyTest {
 
 	@Test
 	public void testConcurrentReservations() throws InterruptedException {
-		int numberOfThreads = 50;
+		int numberOfThreads = 40;
 		ExecutorService executor = Executors.newFixedThreadPool(numberOfThreads);
 		CountDownLatch latch = new CountDownLatch(1);
 		AtomicInteger successCount = new AtomicInteger(0);
@@ -82,12 +86,14 @@ public class ReservationUseCaseInteractorConcurrencyTest {
 			executor.submit(() -> {
 				try {
 					latch.await(); // 모든 스레드가 준비되면 동시에 실행
+
+					// 잠시 지연을 추가하여 잠금 경합을 유도 (선택 사항)
+
 					TokenDto token = reservationUseCaseInteractor.reserveSeat(uid, seatDetailId);
 					tokens.add(token);
 
 					Map<String, Object> tokensAllValue = tokenService.getTokensAllValue(token.getToken());
 					long queueOrder = Long.parseLong(tokensAllValue.get("queueOrder").toString());
-					System.out.println("사용자 대기열 순서: " + queueOrder);
 
 					if (queueOrder == 0) {
 						successCount.incrementAndGet();
@@ -96,7 +102,6 @@ public class ReservationUseCaseInteractorConcurrencyTest {
 					}
 				} catch (Exception e) {
 					failureCount.incrementAndGet();
-					System.out.println("사용자 예약 실패 ");
 				}
 			});
 		}
@@ -106,6 +111,8 @@ public class ReservationUseCaseInteractorConcurrencyTest {
 		executor.shutdown();
 		boolean finished = executor.awaitTermination(2, TimeUnit.MINUTES);
 		assertTrue(finished, "스레드가 제 시간에 종료되지 않았습니다.");
+
+		System.out.println("count : " + successCount.get() + failureCount.get() );
 
 		// Assertions
 
@@ -122,14 +129,14 @@ public class ReservationUseCaseInteractorConcurrencyTest {
 
 		// 대기열에 나머지 사용자가 추가되었는지 확인
 		List<WaitingQueue> waitingQueues = waitingQueueService.getQueueBySeatDetailId(seatDetailId);
-		assertEquals(numberOfThreads, waitingQueues.size(), "대기열에 나머지 사용자가 추가되어야 합니다.");
+		assertEquals(numberOfThreads - 1, waitingQueues.size(), "대기열에 나머지 사용자가 추가되어야 합니다.");
 
 		// 대기열 우선순위 검증
 		// 대기열 우선순위가 1부터 numberOfThreads -1까지 연속적으로 있는지 확인
 		List<Long> sortedPriorities = waitingQueues.stream()
 			.map(WaitingQueue::getPriority)
 			.sorted()
-			.toList();
+			.collect(Collectors.toList());
 
 		for (int i = 0; i < sortedPriorities.size(); i++) {
 			assertEquals(i + 1, sortedPriorities.get(i), "우선순위가 올바르게 연속적으로 증가해야 합니다.");
@@ -141,4 +148,84 @@ public class ReservationUseCaseInteractorConcurrencyTest {
 			.collect(Collectors.toSet());
 		assertEquals(waitingQueues.size(), uniquePriorities.size(), "대기열의 모든 우선순위는 고유해야 합니다.");
 	}
-}
+
+
+
+
+	@Test
+	public void testPriorityIncrement() {
+		int numberOfUsers = 5; // 테스트할 사용자 수
+		long seatDetailId = 1L;
+
+		// 사용자 ID 1부터 numberOfUsers까지 대기열에 추가
+		for (long userId = 1; userId <= numberOfUsers; userId++) {
+			WaitingQueueDto waitingQueueDto = WaitingQueueDto.builder()
+				.userId(userId)
+				.seatDetailId(seatDetailId)
+				.waitingStatus(WaitingStatus.WAITING)
+				.reservationDt(LocalDateTime.now())
+				.build();
+
+			WaitingQueueDto waitingQueue = waitingQueueService.addWaitingQueue(waitingQueueDto);
+			assertNotNull(waitingQueue.getWaitingId(), "대기열 ID가 null이어서는 안 됩니다.");
+			assertTrue(waitingQueue.getPriority() > 0, "우선순위는 0보다 커야 합니다.");
+		}
+
+		// 대기열을 조회하여 우선순위가 1부터 numberOfUsers까지 연속적으로 증가하는지 확인
+		List<WaitingQueue> waitingQueues = waitingQueueService.getQueueBySeatDetailId(seatDetailId);
+		assertEquals(numberOfUsers, waitingQueues.size(), "대기열에 추가된 사용자 수가 일치해야 합니다.");
+
+		List<Long> sortedPriorities = waitingQueues.stream()
+			.map(WaitingQueue::getPriority)
+			.sorted()
+			.collect(Collectors.toList());
+
+		for (int i = 0; i < sortedPriorities.size(); i++) {
+			assertEquals(i + 1, sortedPriorities.get(i), "우선순위가 올바르게 연속적으로 증가해야 합니다.");
+		}
+
+		// 우선순위의 고유성 확인
+		Set<Long> uniquePriorities = waitingQueues.stream()
+			.map(WaitingQueue::getPriority)
+			.collect(Collectors.toSet());
+		assertEquals(waitingQueues.size(), uniquePriorities.size(), "모든 우선순위는 고유해야 합니다.");
+	}
+
+	@Test
+	public void testPriorityIncrementWithPessimisticLocking() {
+		int numberOfUsers = 5; // 테스트할 사용자 수
+		long seatDetailId = 1L;
+
+		// 사용자 ID 1부터 numberOfUsers까지 대기열에 추가
+		for (long userId = 1; userId <= numberOfUsers; userId++) {
+			WaitingQueueDto waitingQueueDto = WaitingQueueDto.builder()
+				.userId(userId)
+				.seatDetailId(seatDetailId)
+				.waitingStatus(WaitingStatus.WAITING)
+				.reservationDt(LocalDateTime.now())
+				.build();
+
+			WaitingQueueDto waitingQueue = waitingQueueService.addWaitingQueue(waitingQueueDto);
+			assertNotNull(waitingQueue.getWaitingId(), "대기열 ID가 null이어서는 안 됩니다.");
+			assertTrue(waitingQueue.getPriority() > 0, "우선순위는 0보다 커야 합니다.");
+		}
+
+		// 대기열을 조회하여 우선순위가 1부터 numberOfUsers까지 연속적으로 증가하는지 확인
+		List<WaitingQueue> waitingQueues = waitingQueueService.getQueueBySeatDetailId(seatDetailId);
+		assertEquals(numberOfUsers, waitingQueues.size(), "대기열에 추가된 사용자 수가 일치해야 합니다.");
+
+		List<Long> sortedPriorities = waitingQueues.stream()
+			.map(WaitingQueue::getPriority)
+			.sorted()
+			.collect(Collectors.toList());
+
+		for (int i = 0; i < sortedPriorities.size(); i++) {
+			assertEquals(i + 1, sortedPriorities.get(i), "우선순위가 올바르게 연속적으로 증가해야 합니다.");
+		}
+
+		// 우선순위의 고유성 확인
+		Set<Long> uniquePriorities = waitingQueues.stream()
+			.map(WaitingQueue::getPriority)
+			.collect(Collectors.toSet());
+		assertEquals(waitingQueues.size(), uniquePriorities.size(), "모든 우선순위는 고유해야 합니다.");
+	}}
